Remove potential bugs